Updated Firebase connection.

--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "com-badrit-base64": "^0.2.0",
     "com.synconset.imagepicker": "^2.1.10",
     "cordova-admob-sdk": "0.15.1",
-    "cordova-ios": "~4.5.0",
+    "cordova-android": "~6.3.0",
+    "cordova-ios": "^4.5.4",
     "cordova-plugin-add-swift-support": "^1.7.2",
     "cordova-plugin-admob-free": "0.15.0",
     "cordova-plugin-apprate": "^1.4.0",
@@ -82,8 +83,7 @@
     "sw-toolbox": "3.6.0",
     "text-mask-addons": "3.5.1",
     "videogular2": "6.0.1",
-    "zone.js": "0.8.18",
-    "cordova-android": "~6.3.0"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
