--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,7 +1,7 @@
 {
-   "name": "ion2-fullapp-ELITE",
-  "app_id": "066dd7ce",
-   "integrations": {
+  "name": "RadioWRXBeta",
+  "app_id": "f0c571f4",
+  "integrations": {
     "cordova": {}
   },
   "type": "ionic-angular"
